[package]
name = "cso-simulator"
version = "1.0.0"
edition = "2024"
authors = ["Guilherme F. G. Santos <strukturaenterprise@gmail.com>"]
description = "A narrative simulation of how security decisions turn into legal outcomes"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Guivernoir/cso-simulator"
keywords = ["security", "simulation", "governance", "risk-management"]
categories = ["games", "simulation"]

[dependencies]
# Async runtime - industry standard
tokio = { version = "1.35", features = ["full"] }

# Serialization - battle-tested
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography - Mozilla-audited
ring = "0.17"

# Memory hygiene
zeroize = { version = "1.7", features = ["derive"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Terminal UI
crossterm = "0.27"
colored = "2.1"
toml = "0.9.11"
textwrap = "0.16.2"
console = "0.16.2"
argon2 = "0.5.3"
rand = "0.8.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[[bin]]
name = "cso-sim"
path = "src/main.rs"
